--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "i18n": "^0.15.1",
+    "i18next": "^23.10.0",
+    "i18next-fs-backend": "^2.3.1",
+    "i18next-http-middleware": "^3.5.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "twilio": "^4.22.0"
